[tool.ruff]
lint.ignore = ["E501"]

[tool.poetry]
name = "builder"
version = "0.3.1"
description = "GRAPEVNE Builder"
authors = ["Kraemer-lab"]
license = "MIT"
readme = "README.md"
exclude = [
    "builder/tests"
]

[tool.poetry.dependencies]
python = "^3.11"
cachetools = "5.3.2"
pyyaml = "6.0.1"
requests = "2.32.2"


[tool.poetry.group.dev.dependencies]
ruff = "0.3.0"
pytest = "8.0.2"
coverage = "7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
