[project]
name = "builder"
version = "0.4.2"
description = "GRAPEVNE Builder"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=5.5.0",
    "grapevne>=0.2.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "snakemake<9",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.6.4",
    "types-cachetools>=5.5.0.20240820",
    "types-pyyaml>=6.0.12.20240808",
    "types-requests>=2.32.0.20240907",
]

[tool.uv.sources]
builder = { workspace = true }
