[project]
name = "pyrunner"
version = "0.3.1"
description = "GRAPEVNE Electron App Python Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "builder",
    "grapevne>=0.2",
    "runner",
    "smart-open>=7.0.4",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pyinstaller>=6.10.0",
    "setuptools>=74.1.2",
    "requests>=2.32.3",
]

[tool.uv.sources]
builder = { path = "../builder" }
runner = { path = "../runner" }
