[project]
name = "pyrunner"
version = "0.3.1"
description = "GRAPEVNE Electron App Python Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "builder",
    "grapevne>=0.2",
    "runner",
    "smart-open>=7.0.4",
    "snakemake-storage-plugin-http>=0.2.3",
    "snakemake-storage-plugin-s3>=0.2.12",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pyinstaller>=6.10.0",
    "setuptools>=74.1.2",
    "requests>=2.32.3",
]

[tool.uv.sources]
builder = { path = "../builder" }
runner = { path = "../runner" }
