[tool.ruff]
lint.ignore = ["E501"]

[tool.poetry]
name = "runner"
version = "0.3.1"
description = "GRAPEVNE Runner"
authors = ["Kraemer-lab"]
license = "MIT"
readme = "README.md"
exclude = [
    "runner/snakemake_runner_test",
]

[tool.poetry.dependencies]
python = "^3.11"
builder = {path = "../builder"}
snakemake = "7.32"
boto3 = "^1.34.156"
pulp = "2.7"


[tool.poetry.group.dev.dependencies]
ruff = "0.3.0"
pytest = "7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
