[project]
name = "runner"
version = "0.4.0"
description = "GRAPEVNE Runner"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "builder",
    "gitpython>=3.1.43",
    "snakemake>=8.20.3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.6.4",
]

[tool.uv.sources]
builder = { path = "../builder" }
