[project]
name = "runner"
version = "0.4.2"
description = "GRAPEVNE Runner"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "builder",
    "gitpython>=3.1.43",
    "grapevne>=0.2.5",
    "snakemake<9",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.6.4",
]

[tool.uv.sources]
builder = { path = "../builder" }
